--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
 
     <!--FRAGMENT TODAY-->
     <string name="fragment_today_location">Location</string>
-    <string name="fragment_today_share_dialog_title">Share</string>
+    <string name="fragment_today_share_dialog_title">Actions</string>
     <string name="fragment_today_share_dialog_item_1">Share</string>
     <string name="fragment_today_share_dialog_item_2">Share via e-mail</string>
     <string name="fragment_today_share_dialog_item_3">Share via SMS</string>
